--- a/index.html
+++ b/index.html
@@ -138,41 +138,66 @@
 
 				<!-- PORTFOLIO IMAGE 1 -->
 
-			    	<div id="PortIcon">
-						<figure>
-							<img  src="assets/img/portfolio/folio01.jpg" alt="">
-							<figcaption id="PortBar">
-								<h5 class="PortCaption">UI DESIGN</h5>
-								<a class="PortCaption" id="LookLink" data-toggle="modal" href="#myModal" >Take a Look</a>
-							</figcaption>
-						</figure>
-			    	</div>
+		    	<div id="PortIcon">
+					<figure>
+						<img  src="assets/img/portfolio/folio01.jpg" alt="">
+						<figcaption id="PortBar">
+							<h5 class="PortCaption">UI DESIGN</h5>
+							<a class="PortCaption" id="LookLink" data-toggle="modal" href="#WorkWeather" >Take a Look</a>
+						</figcaption>
+					</figure>
+		    	</div>
 
+				<div id="WorkWeather" class="Overlay">
+					<div class="PopUpBox">
+						<a class="Close" href="#home">X</a>
+						<div class="Content">
+							This is the Weather App
+						</div>
+					</div>
+				</div>
 
 				<!-- PORTFOLIO IMAGE 2 -->
 
-			    	<div id="PortIcon">
-						<figure>
-							<img  src="assets/img/portfolio/folio02.jpg" alt="">
-							<figcaption id="PortBar">
-								<h5 class="PortCaption">UI DESIGN</h5>
-								<a class="PortCaption" id="LookLink" data-toggle="modal" href="#myModal" >Take a Look</a>
-							</figcaption>
-						</figure>
-			    	</div>
+		    	<div id="PortIcon">
+					<figure>
+						<img  src="assets/img/portfolio/folio02.jpg" alt="">
+						<figcaption id="PortBar">
+							<h5 class="PortCaption">UI DESIGN</h5>
+							<a class="PortCaption" id="LookLink" data-toggle="modal" href="#WorkVaux" >Take a Look</a>
+						</figcaption>
+					</figure>
+		    	</div>
 
+		    	<div id="WorkVaux" class="Overlay">
+					<div class="PopUpBox">
+						<a class="Close" href="#home">X</a>
+						<div class="Content">
+							This is the Vaux Landing
+						</div>
+					</div>
+				</div>
 				
 				<!-- PORTFOLIO IMAGE 3 -->
 
-			    	<div id="PortIcon">
-						<figure>
-							<img  src="assets/img/portfolio/folio03.jpg" alt="">
-							<figcaption id="PortBar">
-								<h5 class="PortCaption">ANDROID PAGE</h5>
-								<a class="PortCaption" id="LookLink" data-toggle="modal" href="#myModal" >Take a Look</a>
-							</figcaption>
-						</figure>
-			    	</div>
+		    	<div id="PortIcon">
+					<figure>
+						<img  src="assets/img/portfolio/folio03.jpg" alt="">
+						<figcaption id="PortBar">
+							<h5 class="PortCaption">ANDROID PAGE</h5>
+							<a class="PortCaption" id="LookLink" data-toggle="modal" href="#WorkProfile" >Take a Look</a>
+						</figcaption>
+					</figure>
+		    	</div>
+
+		    	<div id="WorkProfile" class="Overlay">
+					<div class="PopUpBox">
+						<a class="Close" href="#home">X</a>
+						<div class="Content">
+							This is my sexy Tinder page
+						</div>
+					</div>
+				</div>
 
 				<!-- PORTFOLIO IMAGE 3 -->
 
@@ -181,9 +206,18 @@
 						<img  src="assets/img/portfolio/folio04.jpg" alt="">
 						<figcaption id="PortBar">
 							<h5 class="PortCaption">ANDROID PAGE</h5>
-							<a class="PortCaption" id="LookLink" data-toggle="modal" href="#myModal" >Take a Look</a>
+							<a class="PortCaption" id="LookLink" data-toggle="modal" href="#WorkArchVid" >Take a Look</a>
 						</figcaption>
 					</figure>
+				</div>
+
+				<div id="WorkArchVid" class="Overlay">
+					<div class="PopUpBox">
+						<a class="Close" href="#home">X</a>
+						<div class="Content">
+							This is Archive vs Video size
+						</div>
+					</div>
 				</div>
 
 
@@ -194,23 +228,42 @@
 						<img  src="assets/img/portfolio/folio05.jpg" alt="">
 						<figcaption id="PortBar">
 							<h5 class="PortCaption">ANDROID PAGE</h5>
-							<a class="PortCaption" id="LookLink" data-toggle="modal" href="#myModal" >Take a Look</a>
+							<a class="PortCaption" id="LookLink" data-toggle="modal" href="#WorkClock" >Take a Look</a>
 						</figcaption>
 					</figure>
 				</div>
 
+				<div id="WorkClock" class="Overlay">
+					<div class="PopUpBox">
+						<a class="Close" href="#home">X</a>
+						<div class="Content">
+							This is a beautiful clock app
+						</div>
+					</div>
+				</div>
 
-			<!-- PORTFOLIO IMAGE 3 -->
+				<!-- PORTFOLIO IMAGE 3 -->
 
-			<div id="PortIcon">
-				<figure>
-					<img  src="assets/img/portfolio/folio06.jpg" alt="">
-					<figcaption id="PortBar">
-						<h5 class="PortCaption">ANDROID PAGE</h5>
-						<a class="PortCaption" id="LookLink" data-toggle="modal" href="#myModal" >Take a Look</a>
-					</figcaption>
-				</figure>
-			</div>
+				<div id="PortIcon">
+					<figure>
+						<img  src="assets/img/portfolio/folio06.jpg" alt="">
+						<figcaption id="PortBar">
+							<h5 class="PortCaption">ANDROID PAGE</h5>
+							<a class="PortCaption" id="LookLink" data-toggle="modal" href="#WorkDesktop" >Take a Look</a>
+						</figcaption>
+					</figure>
+				</div>
+
+				<div id="WorkDesktop" class="Overlay">
+					<div class="PopUpBox">
+						<a class="Close" href="#home">X</a>
+						<div class="Content">
+							This is a Desktop GUI
+						</div>
+					</div>
+				</div>
+
+
 		</div>
 		</div>
 			<br>
