--- a/index.html
+++ b/index.html
@@ -149,10 +149,12 @@
 		    	</div>
 
 				<div id="WorkWeather" class="Overlay">
-					<div class="PopUpBox">
+					<div class="PopUpBox" class="Overlay">
 						<a class="Close" href="#home">X</a>
-						<div class="Content">
-							This is the Weather App
+						<div class="PopUpContent">
+							UI DESIGN
+							<img  src="assets/img/portfolio/folio01.jpg" alt="">
+							This is a little blurb about my Weather App. It's super simplistic, minimal, and easy to understand. It is available on the Google Play and Apple App Stores for $100.
 						</div>
 					</div>
 				</div>
@@ -172,8 +174,10 @@
 		    	<div id="WorkVaux" class="Overlay">
 					<div class="PopUpBox">
 						<a class="Close" href="#home">X</a>
-						<div class="Content">
-							This is the Vaux Landing
+						<div class="PopUpContent">
+							UI DESIGN
+							<img  src="assets/img/portfolio/folio02.jpg" alt="">
+							Welcome to the landing page for Vaux GmbH, a desktop and mobile development shop. I added a nice carousel to showcase their projects.
 						</div>
 					</div>
 				</div>
@@ -193,8 +197,10 @@
 		    	<div id="WorkProfile" class="Overlay">
 					<div class="PopUpBox">
 						<a class="Close" href="#home">X</a>
-						<div class="Content">
-							This is my sexy Tinder page
+						<div class="PopUpContent">
+							ANDROID PAGE
+							<img  src="assets/img/portfolio/folio03.jpg" alt="">
+							This is my sexy Tinder Profile. I like that my goatee makes me look sophisticated. Here's a secret... I wear the beanie cap all the time because I'm balding.
 						</div>
 					</div>
 				</div>
@@ -214,8 +220,10 @@
 				<div id="WorkArchVid" class="Overlay">
 					<div class="PopUpBox">
 						<a class="Close" href="#home">X</a>
-						<div class="Content">
-							This is Archive vs Video size
+						<div class="PopUpContent">
+							ANDROID PAGE
+							<img  src="assets/img/portfolio/folio04.jpg" alt="">
+							I built these two tracking visualizations for the size of my Archive and Video folders.It's a very simple design that shows the size of the folder, and how many files I have in them. 
 						</div>
 					</div>
 				</div>
@@ -236,8 +244,10 @@
 				<div id="WorkClock" class="Overlay">
 					<div class="PopUpBox">
 						<a class="Close" href="#home">X</a>
-						<div class="Content">
-							This is a beautiful clock app
+						<div class="PopUpContent">
+							ANDROID PAGE
+							<img  src="assets/img/portfolio/folio05.jpg" alt="">
+							All Android Platforms can now downlaod this background clock which is divided into two sections: yellow for daytime and blue for nighttime. The two intersect at the daily time for sunrise and sunset in your location.
 						</div>
 					</div>
 				</div>
@@ -257,8 +267,10 @@
 				<div id="WorkDesktop" class="Overlay">
 					<div class="PopUpBox">
 						<a class="Close" href="#home">X</a>
-						<div class="Content">
-							This is a Desktop GUI
+						<div class="PopUpContent">
+							ANDROID PAGE
+							<img  src="assets/img/portfolio/folio06.jpg" alt="">
+							This is a custom desktop landing I developed for Donald Trump. All specifications were given to me by Mr. Trump. I was pleasantly suprised at what an eye for design he has.
 						</div>
 					</div>
 				</div>
@@ -287,13 +299,13 @@
 			<div>
 			<div id="ContBlog">
 				<div id="BlogEntry">
-					<div class="BlogBlock" id="BlogUser">
+					<div id="BlogUser">
 					<br>
 						<p><img  src="assets/img/team/u1.jpg" width="60px" height="60px"></p>
 						<h4>Pinco Pallino</h4>
 						<h5>Published Feb 28.</h5>
 					</div>
-					<div class="BlogBlock" id="BlogInfo">
+					<div id="BlogInfo">
 						<h2>What Define Success</h2>
 						<p>No matter how old you are, where you’re from or what you do for a living, we all share something in common—a desire to be successful. .</p>
 						<p>Each person’s definition of success is different, however, as some may define success as being a loving and faithful spouse or a caring and responsible parent, while most people would equate success with wealth, fame, and power</p>
@@ -302,13 +314,13 @@
 					</div>
 				</div>
 				<div id="BlogEntry" >
-					<div class="BlogBlock" id="BlogUser">
+					<div id="BlogUser">
 					<br>
 						<p><img  src="assets/img/team/u1.jpg" width="60px" height="60px"></p>
 						<h4>Pinco Pallino</h4>
 						<h5>Published Feb 02.</h5>
 					</div>
-					<div class="BlogBlock" id="BlogInfo">
+					<div id="BlogInfo">
 						<h2>A Beautiful Story</h2>
 						<p>One day, in a heavily crowded place, a young man was shouting at the crowd. “People look at me; I have the most beautiful heart in the world.”</p>
 						<p>Many people looked at him and were stunned to see the beautiful heart in a perfect shape, no little flaw, which looked quite amazing. Most of the people who saw his heart was mesmerized by the beauty of his heart and praised him. </p>
@@ -316,7 +328,7 @@
 						<br>
 					</div>
 				</div>
-				<div id="BlogEntry" >
+				<div id="MiniBlogCont" >
 					<div id="MiniBlog">
 						<p> Parallax Tutorial</p> <p > Dec. 2015</p>
 						<p><a href="#" > Read More</a></p>
@@ -355,8 +367,8 @@
 				<hr>
 				<br>
 				<br>
-				<div >
-				<div class="ContCol" id="Contact">
+				<div id="SupportCont">
+				<div class="SupportCol" id="Contact">
 					<h3>Contact Information</h3>
 					<p><span ></span> Paradeplatz, Zurich<br/>
 						<span ></span> +0041 9884 4893<br/>
@@ -367,7 +379,7 @@
 					</p>
 				</div>
 				
-				<div class="ContCol" id="Newsletter">
+				<div class="SupportCol" id="Newsletter">
 					<h3>Newsletter</h3>
 					<p>Register to our newsletter and be updated with the latests information regarding our services, offers and much more.</p>
 					<p>
@@ -393,7 +405,7 @@
 					</p>
 				</div>
 				
-				<div class="ContCol" id="Support">
+				<div class="SupportCol" id="Support">
 					<h3>Support Us</h3>
 					<p>If you would like to support my work and my passion for web crafting please feel free to send me an email, or to share one of my project on tweeter or facebook. Any small little thing will be appreciated!</p>
 				</div>
