--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 					<figure>
 						<img  src="assets/img/portfolio/folio01.jpg" alt="">
 						<figcaption id="PortBar">
-							<h5 class="PortCaption">UI DESIGN</h5>
+							<h5 class="PortCaption" id="PortType">UI DESIGN</h5>
 							<a class="PortCaption" id="LookLink" data-toggle="modal" href="#WorkWeather" >Take a Look</a>
 						</figcaption>
 					</figure>
@@ -153,7 +153,9 @@
 						<a class="Close" href="#home">X</a>
 						<div class="PopUpContent">
 							UI DESIGN
-							<img  src="assets/img/portfolio/folio01.jpg" alt="">
+							<div class="PopUpImage">
+								<img  src="assets/img/portfolio/folio01.jpg" alt="">
+							</div>
 							This is a little blurb about my Weather App. It's super simplistic, minimal, and easy to understand. It is available on the Google Play and Apple App Stores for $100.
 						</div>
 					</div>
@@ -165,7 +167,7 @@
 					<figure>
 						<img  src="assets/img/portfolio/folio02.jpg" alt="">
 						<figcaption id="PortBar">
-							<h5 class="PortCaption">UI DESIGN</h5>
+							<h5 class="PortCaption" id="PortType">UI DESIGN</h5>
 							<a class="PortCaption" id="LookLink" data-toggle="modal" href="#WorkVaux" >Take a Look</a>
 						</figcaption>
 					</figure>
@@ -176,7 +178,9 @@
 						<a class="Close" href="#home">X</a>
 						<div class="PopUpContent">
 							UI DESIGN
-							<img  src="assets/img/portfolio/folio02.jpg" alt="">
+							<div class="PopUpImage">
+								<img  src="assets/img/portfolio/folio02.jpg" alt="">
+							</div>
 							Welcome to the landing page for Vaux GmbH, a desktop and mobile development shop. I added a nice carousel to showcase their projects.
 						</div>
 					</div>
@@ -188,7 +192,7 @@
 					<figure>
 						<img  src="assets/img/portfolio/folio03.jpg" alt="">
 						<figcaption id="PortBar">
-							<h5 class="PortCaption">ANDROID PAGE</h5>
+							<h5 class="PortCaption" id="PortType">ANDROID PAGE</h5>
 							<a class="PortCaption" id="LookLink" data-toggle="modal" href="#WorkProfile" >Take a Look</a>
 						</figcaption>
 					</figure>
@@ -199,7 +203,9 @@
 						<a class="Close" href="#home">X</a>
 						<div class="PopUpContent">
 							ANDROID PAGE
-							<img  src="assets/img/portfolio/folio03.jpg" alt="">
+							<div class="PopUpImage">
+								<img  src="assets/img/portfolio/folio03.jpg" alt="">
+							</div>
 							This is my sexy Tinder Profile. I like that my goatee makes me look sophisticated. Here's a secret... I wear the beanie cap all the time because I'm balding.
 						</div>
 					</div>
@@ -211,7 +217,7 @@
 					<figure>
 						<img  src="assets/img/portfolio/folio04.jpg" alt="">
 						<figcaption id="PortBar">
-							<h5 class="PortCaption">ANDROID PAGE</h5>
+							<h5 class="PortCaption" id="PortType">ANDROID PAGE</h5>
 							<a class="PortCaption" id="LookLink" data-toggle="modal" href="#WorkArchVid" >Take a Look</a>
 						</figcaption>
 					</figure>
@@ -222,7 +228,9 @@
 						<a class="Close" href="#home">X</a>
 						<div class="PopUpContent">
 							ANDROID PAGE
-							<img  src="assets/img/portfolio/folio04.jpg" alt="">
+							<div class="PopUpImage">
+								<img  src="assets/img/portfolio/folio04.jpg" alt="">
+							</div>
 							I built these two tracking visualizations for the size of my Archive and Video folders.It's a very simple design that shows the size of the folder, and how many files I have in them. 
 						</div>
 					</div>
@@ -235,7 +243,7 @@
 					<figure>
 						<img  src="assets/img/portfolio/folio05.jpg" alt="">
 						<figcaption id="PortBar">
-							<h5 class="PortCaption">ANDROID PAGE</h5>
+							<h5 class="PortCaption" id="PortType">ANDROID PAGE</h5>
 							<a class="PortCaption" id="LookLink" data-toggle="modal" href="#WorkClock" >Take a Look</a>
 						</figcaption>
 					</figure>
@@ -246,7 +254,9 @@
 						<a class="Close" href="#home">X</a>
 						<div class="PopUpContent">
 							ANDROID PAGE
-							<img  src="assets/img/portfolio/folio05.jpg" alt="">
+							<div class="PopUpImage">
+								<img  src="assets/img/portfolio/folio05.jpg" alt="">
+							</div>
 							All Android Platforms can now downlaod this background clock which is divided into two sections: yellow for daytime and blue for nighttime. The two intersect at the daily time for sunrise and sunset in your location.
 						</div>
 					</div>
@@ -258,7 +268,7 @@
 					<figure>
 						<img  src="assets/img/portfolio/folio06.jpg" alt="">
 						<figcaption id="PortBar">
-							<h5 class="PortCaption">ANDROID PAGE</h5>
+							<h5 class="PortCaption" id="PortType">ANDROID PAGE</h5>
 							<a class="PortCaption" id="LookLink" data-toggle="modal" href="#WorkDesktop" >Take a Look</a>
 						</figcaption>
 					</figure>
@@ -269,7 +279,9 @@
 						<a class="Close" href="#home">X</a>
 						<div class="PopUpContent">
 							ANDROID PAGE
-							<img  src="assets/img/portfolio/folio06.jpg" alt="">
+							<div class="PopUpImage">
+								<img  src="assets/img/portfolio/folio06.jpg" alt="">
+							</div>
 							This is a custom desktop landing I developed for Donald Trump. All specifications were given to me by Mr. Trump. I was pleasantly suprised at what an eye for design he has.
 						</div>
 					</div>
