--- a/index.html
+++ b/index.html
@@ -432,6 +432,9 @@
 			</div>
 		</div>
 
+				<!--        Javascript/jQuery        -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 
   </body>
 </html>
