--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
          </div>
         <div id="NavBar">
           <ul >
-            <li><a href="#home" >Home</a></li>
-			<li> <a href="#about" > About Me</a></li>
-			<li> <a href="#portfolio" > Portfolio</a></li>
-			<li> <a href="#blog" > Blog</a></li>
-			<li> <a href="#contact" > Contact</a></li>
+            <li><a href="#home" >Home<br><img class="icon" src="assets/img/Icons/menu-home.png" alt=""></a></li>
+			<li> <a href="#about" > About Me<br><img class="icon" src="assets/img/Icons/menu-about.png" alt=""></a></li>
+			<li> <a href="#portfolio" > Portfolio<br><img class="icon" src="assets/img/Icons/menu-portfolio.png" alt=""></a></li>
+			<li> <a href="#blog" > Blog<br><img class="icon" src="assets/img/Icons/menu-blog.png" alt=""></a></li>
+			<li> <a href="#contact" > Contact<br><img class="icon" src="assets/img/Icons/menu-contact.png" alt=""></a></li>
         </div>
       </div>
     </div>
